--- a/02-Forms-Tables/formularios.html
+++ b/02-Forms-Tables/formularios.html
@@ -10,16 +10,34 @@
     <form action="resultados.html" method="get">
         <div>
             <label for="nombreusuario">Nombre de usuario</label>
-            <input name="nombreusuario" id="nombreusuario"">
+            <input type="text" name="nombreusuario" id="nombreusuario" required>
         </div>
-        <div>
-            <label for="comentario">Comentarios</label>
-            <input name="comentario" id="comentario">
-        </div>
+        <br>
         <div>
             <label for="password">contraseña</label>
-            <input name="password" id="password">
+            <input type="password" name="password" id="password" required>
         </div>
+        <br>
+        <div>
+            <label for="email">cual es tu email</label>
+            <input type="email" name="email" id="email">
+        </div>
+        <br>
+        <div>
+            <label for="edad">cual es tu edad</label>
+            <input type="number" name="edad" id="edad" min="0" max="200" step="5">
+        </div>
+        <br>
+        <div>
+            <label for="nacimiento">cual es tu fecha de nacimiento</label>
+            <input type="date" name="nacimiento" id="nacimiento">
+        </div>
+        <br>
+        <div>
+            <label for="Comentarios">Comentarios</label>
+            <textarea name="comentarios" id="comentarios"></textarea>   
+        </div>
+        <br>
         <button type="reset">Reset</button>
         <button type="submit">Enviar</button>
     </form>
