--- a/07-Formularios/form.html
+++ b/07-Formularios/form.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/animate.css">
 </head>
 <body>
     <div class="container">
@@ -30,26 +31,26 @@
         </div>
         <form action="">
             <div class="section-inputs">
-                <label for="name">
+                <label for="name" class="scale-up-center">
                     <span>Name</span>
                     <input required id="name" name="name" placeholder="Example">
                 </label>
-                <label for="username">
+                <label for="username" class="scale-up-center">
                     <span>Username</span>
                     <input required id="username" name="username" placeholder="User Example">
                 </label>
             </div>
-            <label for="email">
+            <label for="email" class="scale-up-center">
                 <span>Email</span>
                 <input required type="email" name="email" id="email" placeholder="Example@hotmail.com">
             </label>
-            <label for="password">
+            <label for="password" class="scale-up-center">
                 <span>Password</span>
                 <input required type="password" name="password" id="password" placeholder="6+ characters">
             </label>
             <label for="checkbox" class="checkbox-label">
                 <input type="checkbox" name="checkbox" id="checkbox">
-                <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis aut quos cupiditate ullam magni cum saepe delectus voluptate accusamus iste doloribus accusantium, repudiandae nihil. In perferendis ipsa ab corrupti praesentium.</span>
+                <span class="text-focus-in">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis aut quos cupiditate ullam magni cum saepe delectus voluptate accusamus iste doloribus accusantium, repudiandae nihil. In perferendis ipsa ab corrupti praesentium.</span>
             </label>
             <button type="submit" class="submit-btn">Create account</button>
         </form>
