--- a/07-Formularios/form.html
+++ b/07-Formularios/form.html
@@ -8,52 +8,54 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/animate.css">
 </head>
-<body>
+<div>
     <div class="container">
-        <h3>Sign in to Form</h3>
-        <div class="buttons">
-            <button class="google-btn">
-                <picture>
-                    <img src="./img/Google_Icons-09-512.webp" alt="logo-google">
-                </picture>
-                <span>Acceder con Google</span>
-            </button>
-            <button class="twitter-btn">
-                <picture>
-                    <img src="./img/twitter-logo-24.png" alt="logo-twitter">
-                </picture>
-            </button>
-        </div>
-        <div class="separator">
-            <hr>
-            <span>Or</span>
-            <hr> 
-        </div>
-        <form action="">
-            <div class="section-inputs">
-                <label for="name" class="scale-up-center">
-                    <span>Name</span>
-                    <input required id="name" name="name" placeholder="Example">
-                </label>
-                <label for="username" class="scale-up-center">
-                    <span>Username</span>
-                    <input required id="username" name="username" placeholder="User Example">
-                </label>
+        <div class="formulario">
+            <h3>Sign in to Form</h3>
+            <div class="buttons">
+                <button class="google-btn">
+                    <picture>
+                        <img src="./img/Google_Icons-09-512.webp" alt="logo-google">
+                    </picture>
+                    <span>Acceder con Google</span>
+                </button>
+                <button class="twitter-btn">
+                    <picture>
+                        <img src="./img/twitter-logo-24.png" alt="logo-twitter">
+                    </picture>
+                </button>
             </div>
-            <label for="email" class="scale-up-center">
-                <span>Email</span>
-                <input required type="email" name="email" id="email" placeholder="Example@hotmail.com">
-            </label>
-            <label for="password" class="scale-up-center">
-                <span>Password</span>
-                <input required type="password" name="password" id="password" placeholder="6+ characters">
-            </label>
-            <label for="checkbox" class="checkbox-label">
-                <input type="checkbox" name="checkbox" id="checkbox">
-                <span class="text-focus-in">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis aut quos cupiditate ullam magni cum saepe delectus voluptate accusamus iste doloribus accusantium, repudiandae nihil. In perferendis ipsa ab corrupti praesentium.</span>
-            </label>
-            <button type="submit" class="submit-btn">Create account</button>
-        </form>
+            <div class="separator">
+                <hr>
+                <span>Or</span>
+                <hr> 
+            </div>
+            <form action="">
+                <div class="section-inputs">
+                    <label for="name" class="scale-up-center">
+                        <span>Name</span>
+                        <input required id="name" name="name" placeholder="Example">
+                    </label>
+                    <label for="username" class="scale-up-center">
+                        <span>Username</span>
+                        <input required id="username" name="username" placeholder="User Example">
+                    </label>
+                </div>
+                <label for="email" class="scale-up-center">
+                    <span>Email</span>
+                    <input required type="email" name="email" id="email" placeholder="Example@hotmail.com">
+                </label>
+                <label for="password" class="scale-up-center">
+                    <span>Password</span>
+                    <input required type="password" name="password" id="password" placeholder="6+ characters">
+                </label>
+                <label for="checkbox" class="checkbox-label">
+                    <input type="checkbox" name="checkbox" id="checkbox">
+                    <span class="text-focus-in">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis aut quos cupiditate ullam magni cum saepe delectus voluptate accusamus iste doloribus accusantium, repudiandae nihil. In perferendis ipsa ab corrupti praesentium.</span>
+                </label>
+                <button type="submit" class="submit-btn">Create account</button>
+            </form>
+        </div>
     </div>
 </body>
 </html>
