--- a/07-Formularios/form.html
+++ b/07-Formularios/form.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/animate.css">
 </head>
-<div>
+<body>
     <div class="container">
         <div class="formulario">
             <h3>Sign in to Form</h3>
